<resources>
    <string name="app_name">BlogApp</string>
    <string name="login_page">Login Page</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="need_a_new_account">Need a new account?</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>
    <string name="account_settings">Account Settings</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="your_name">Your Name</string>
    <string name="save_settings">Save Settings</string>
    <string name="todo">TODO</string>
    <string name="add_description">Add Description</string>
    <string name="post_blog">Post Blog</string>
    <string name="choose_a_profile_image">Choose a profile image</string>
    <string name="username">Username</string>
    <string name="blog_post_date">Blog Post Date</string>
    <string name="lorem_ipsum_dolor_sit_amet_soluta_regione_urbanitas_vis_in_qui_elit_populo_ut">Lorem ipsum dolor sit amet, soluta regione urbanitas vis in, qui elit populo ut.</string>
    <string name="description">Description:</string>
</resources>
